# WormWorx

./: .gitignore  .openworm.yml  README.md  Readme.md  Readme.txt  WormSim.mkb  WormSim_deployment.mkf  WormWorx.mkb  WormWorx_deployment.mkf  WormWorx_deployment.mkf.bak  WormWrks.mkb  readme.txt
AndroidStudio/WormWorx/: README.md  local.properties
AndroidStudio/WormWorx++/: build.gradle  local.properties
AndroidStudio/WormWorx++/app/: build.gradle
AndroidStudio/WormWorx++/app/release/: app-release.apk  output.json
AndroidStudio/WormWorx++/app/src/main/cpp/: wormsim.h
AndroidStudio/WormWorx++/app/src/main/cpp/sundials-2.3.0/src/ida/: ida.c
AndroidStudio/WormWorx++/app/src/main/cpp/sundials-2.3.0/src/ida/fcmix/: fidajtimes.c  fidapreco.c
AndroidStudio/WormWorx++/app/src/main/java/openworm/: WormWorxLib.java
AndroidStudio/WormWorx++/gradle/wrapper/: gradle-wrapper.properties
AndroidStudio/WormWorx/app/: build.gradle
AndroidStudio/WormWorx/app/src/main/: AndroidManifest.xml
AndroidStudio/WormWorx/app/src/main/cpp/: CMakeLists.txt  wormworx.cpp
AndroidStudio/WormWorx/app/src/main/cpp/sundials-2.3.0/src/ida/fcmix/: fida.c  fidadense.c  fidaewt.c
AndroidStudio/WormWorx/app/src/main/java/openworm/: WormWorx.java  WormWorxView.java
AndroidStudio/WormWorx/gradle/wrapper/: gradle-wrapper.properties
Marmalade/: readme.txt
Marmalade/data/: app.icf  ident.free
Marmalade/deployments/WormWorx.1.aarch64/: README.txt
WormWorx++/: Readme.md  build.gradle  local.properties
WormWorx++/app/: build.gradle
WormWorx++/app/src/main/: AndroidManifest.xml
WormWorx++/app/src/main/cpp/: wormsim.cpp
WormWorx++/app/src/main/cpp/sundials-2.3.0/src/ida/fcmix/: fidaband.c  fidaroot.c
WormWorx++/app/src/main/res/values/: strings.xml
WormWorx++/gradle/wrapper/: gradle-wrapper.properties
WormWorx/data/: IwGxFontTTF.group  development.icf
WormWorx/source/: WormWorx.cpp  WormWorx.h
data/: app.icf  ident.free
deployments/WormSim.0.arm/: README.txt  WormSim.apk
deployments/WormSim.1.arm/: README.txt  WormSim.apk
deployments/WormSim.2.arm/: README.txt  WormSim2.apk
deployments/WormSim.3.arm/: README.txt  WormSim3.apk
deployments/WormWorx.1.aarch64/: README.txt  WormWorx.apk
deployments/WormWorx.1.arm/: README.txt  WormWorx.apk
deployments/WormWorx.2.arm/: README.txt  WormWorx.apk
deployments/WormWorx.3.arm/: README.txt  WormWorx.apk
deployments/WormWrks.1.arm/: README.txt  WormWrks.apk
docs/: index.html
docs/WormWorx_files/: filelist.xml
source/: AppMain.cpp  AppMain.h  WormSim.cpp  WormWorx.cpp  WormWorx.h  WormWrks.cpp
